Yaml-Scripts/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pay-service-route
  namespace: critical-space
spec:
  parentRefs:
    - name: ingress-nginx-gateway
      namespace: ingress-nginx
  rules:
    - backendRefs:
        - name: pay-service
          port: 8282
          weight: 80
        - name: pay-service-2
          port: 8282
          weight: 20
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            setHeaders:
              X-Forwarded-For: ""
